tasky.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      containers:
      - name: tasky
        image: ghcr.io/bradmcdowell/tasky:latest
        ports:
        - containerPort: 8080
        env:  # Define environment variables here
        - name: MONGODB_URI
          value: "mongodb://<USERNAME>:<pass>@ip-172-31-13-143.ap-southeast-2.compute.internal:27017"
        - name: SECRET_KEY
          value: "SomethingSuperSecret"

---
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
spec:
  selector:
    app: tasky
  ports:
    - port: 8080
      targetPort: 8080  # Match this with the containerPort
  type: LoadBalancer
