tasky-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasky-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:region:account-id:certificate/35153619-141a-47a9-9f6d-79037a635e97
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0d3cce95f657c95c8,subnet-04d1260c7ba950167  # Replace with your ALB subnets
spec:
  rules:
  - host: tasky.mcdowell.com.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasky-service
            port:
              number: 8080
